Largely fixed user deletion cascading. Added ability for users and admins to delete own quests.